# SampleProjects

./: README.md
Bacterio/: README.md
Bacterio/Assets/Editor/: AssetBundle_Builder.cs  BacterioEditor.asmdef  DatabaseGenerator.cs  EditorStrings.cs  ReflectionUtility.cs
Bacterio/Assets/Editor/MeshDeformer/: MeshDeformerEditor.cs
Bacterio/Assets/Editor/ParticleGenerator/: ParticleGeneratorEditor.cs
Bacterio/Assets/Editor/StructureNodeGenerator/: StructureNodeGenerator.cs  StructureNodeGeneratorEditor.cs  StructureNodeGeneratorObject.cs
Bacterio/Assets/Editor/TrailGenerator/: TrailGeneratorEditor.cs
Bacterio/Assets/Scripts/: AssetBundleProvider.cs  Bacterio.asmdef  CameraController.cs  Contexts.cs  DebugMethods.cs  GameController.cs  LobbyController.cs
Bacterio/Assets/Scripts/Animator/: AuraAnimator.cs  BacteriaAnimator.cs  BulletAnimator.cs  CellAnimator.cs  PillAnimator.cs  StructureAnimator.cs  TrapAnimator.cs
Bacterio/Assets/Scripts/Common/: BlockArray.cs  ErrorCodes.cs  FreeNodeStack.cs  Globals.cs  MTRandom.cs  ObjectPool.cs  Pathfinder.cs  PlayerInfo.cs  TimerController.cs
Bacterio/Assets/Scripts/Common/MarsenneTwister/: DiceRoll.cs  ExponentialDistribution.cs  GammaDistribution.cs  MersenneTwister.cs  NormalDistribution.cs  PoissonDistribution.cs  PowerLaw.cs  RandomCube.cs  RandomDisk.cs  RandomSphere.cs  RandomSquare.cs  ShuffleBagCollection.cs  SpecialFunctions.cs  WaveToRgb.cs
Bacterio/Assets/Scripts/Databases/: AuraDb.cs  BuffDb.cs  BulletDb.cs  CellDb.cs  EffectDb.cs  PillDb.cs  ShopDb.cs  StructureDb.cs  TrapDb.cs
Bacterio/Assets/Scripts/EditorOnly/: MeshDeformer.cs  ParticleGenerator.cs  TrailGenerator.cs
Bacterio/Assets/Scripts/Game/: GameStatus.cs  MapController.cs  MapGrid.cs  Storyteller.cs
Bacterio/Assets/Scripts/Game/Controllers/: AuraController.cs  (+7 more)
Bacterio/Assets/Scripts/Graphics/: EffectsController.cs
Bacterio/Assets/Scripts/Input/: IInputHandler.cs  MouseTracker.cs  PcInputHandler.cs
Bacterio/Assets/Scripts/Lobby/: GameSetupData.cs  Room.cs  RoomController.cs  RoomFinder.cs
Bacterio/Assets/Scripts/MapObjects/: Aura.cs  Bacteria.cs  Block.cs  Bullet.cs  Cell.cs  Pill.cs  Structure.cs  Territory.cs  Trap.cs
Bacterio/Assets/Scripts/Network/: BacterioAuthenticator.cs  BacterioNetworkDiscovery.cs  MirrorClient.cs  MirrorWrapper.cs  NetworkArray.cs  NetworkArrayObject.cs  NetworkPlayerController.cs  NetworkPlayerObject.cs
Bacterio/Assets/Scripts/UI/: BackgroundCanvas.cs  GameUIController.cs  ScreenController.cs
Bacterio/Assets/Tests/Editor/: Editor.asmdef  PathfinderTest.cs
Bacterio/Assets/Tests/Playmode/: Placeholder.cs  Tests.asmdef
Bacterio/Assets/~Resources/Dbs/: AuraDb.json  ShopDb.json  bulletDb.json  cellDb.json  effectDb.json  structureDb.json  trapDb.json
Bacterio/Assets/~Resources/Shaders/: AreaOutline.shader  MovingBackground.shader
Bacterio/Doc/: HighLevelArquitecture.drawio
RagnarokOnline/: README.md
RagnarokOnline/RagnarokClient/Assets/Editor/: AssetBundle_Builder.cs  ItemDataGenerator.cs  Other.cs  ScriptConfigs.cs  TextureImporterDefault.preset  Utility.cs
RagnarokOnline/RagnarokClient/Assets/Scripts/: AssetBundleProvider.cs  RagnarokClient.asmdef
RagnarokOnline/RagnarokClient/Assets/Tests/: AstarTest.cs  CursorAnimatorTest.cs  EffectsControllerTest.cs  EffectsControllerUnitTests.cs  FloatingTextAnimatorTest.cs  ItemAnimatorTest.cs  KeyBinderTest.cs  MonsterAnimatorControllerTest.cs  ObjectPoolTest.cs  PacketDatabaseTest.cs  PlayerAnimatorControllerTest.cs  SoundTest.cs  Tests.asmdef  UIBuffTest.cs
RagnarokOnline/RagnarokClient/Doc/: ClientFlow.drawio  KeyboardInputFlow.drawio
RagnarokOnline/RagnarokServer/: CMakeLists.txt
RagnarokOnline/RagnarokServer/src/server/: CMakeLists.txt  ServerContext.cpp  ServerContext.h  main.cpp
RagnarokOnline/RagnarokServer/src/server/common/: AutoTrigger.h  Buff.h  BuffDb.h  BuffId.h  CMakeLists.txt  CharacterId.h  CharacterInfo.h  CommonTypes.h  DamageTypes.h  Direction.h  EquipMask.h  GlobalConfig.cpp  GlobalConfig.h  GuildId.h  Item.h  ItemDb.cpp  ItemDb.h  ItemDbId.h  Job.h  JobMask.h  MapId.h  MonsterDb.cpp  MonsterDb.h  MonsterId.h  NpcDb.cpp  NpcDb.h  NpcId.h  PacketEnums.h  PartyId.h  Permission.h  Point.h  ServerLimits.h  ServerRegexes.h  Skill.h  SkillDb.h  SkillId.h  TriggerEffectsCommon.h
RagnarokOnline/RagnarokServer/src/server/map/: BlockArray.h  BlockGrid.hpp  BlockGridIntrusive.h  CMakeLists.txt  DynamicBlockArray.hpp  FixedBlockArray.hpp  IMapLoop.hpp  Map.cpp  Map.h  MapInstanceId.h
RagnarokOnline/RagnarokServer/src/server/map/controllers/: BattleController.cpp  BattleController.h  BuffController.cpp  BuffController.h  CMakeLists.txt  CharacterController.cpp  CharacterController.h  ItemController.cpp  ItemController.h  MonsterController.cpp  MonsterController.h  NpcController.cpp  NpcController.h  SkillController.cpp  SkillController.h  UnitController.cpp  UnitController.h
RagnarokOnline/RagnarokServer/src/server/map/controllers/scripts/: CMakeLists.txt  ItemScripts.cpp  ItemScripts.h  NpcCommonMethods.cpp  NpcScripts.cpp  NpcScripts.h  TriggerEffects.cpp  TriggerEffects.h
RagnarokOnline/RagnarokServer/src/server/map/data/: CMakeLists.txt  MapData.cpp  MapData.h  MapDataRepository.cpp  MapDataRepository.h  Tile.h
RagnarokOnline/RagnarokServer/src/server/map/pathfinding/: CMakeLists.txt  Pathfinder.cpp  Pathfinder.h  Pathfinder_Tests.cpp
RagnarokOnline/RagnarokServer/src/server/map_objects/: Block.h  BlockId.h  BlockType.h  CMakeLists.txt  Character.cpp  Character.h  FieldItem.h  FieldSkill.h  Monster.cpp  Monster.h  Npc.h  Unit.h
RagnarokOnline/RagnarokServer/src/server/network/: MessageBase.h  MessageId.h  Messages.h  PacketBase.h  PacketId.h  Packets.cpp  Packets.h
RagnarokOnline/RagnarokServer/src/server/player_extensions/: CMakeLists.txt  Inventory.cpp  Inventory.h  SkillTree.cpp  SkillTree.h  SkillTreeDb.h  Storage.cpp  Storage.h
RagnarokOnline/RagnarokServer/src/server/repositories/: CMakeLists.txt  CharacterRepository.cpp  CharacterRepository.h
(+243 files in other folders)
